examples/test/testpolicy13960.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13960
  namespace: namespace28
spec:
  podSelector:
    matchLabels:
      key29: value29
      key38: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value32
          key7: value0
      podSelector:
        matchLabels:
          key2: value29
          key0: value37
          key37: value43
